<resources>
    <string name="app_name">2048</string>
    <string name="_2048">2048</string>
    <string name="best_score">best</string>
    <string name="best_results">Best results</string>
    <string name="current_score">current</string>
    <string name="now">now</string>
    <string name="game_over">Game Over</string>
    <string name="current_score1">Current Score</string>
    <string name="high_score">High Score</string>
    <string name="play">Play</string>
    <string name="continueGame">Continue</string>
    <string name="restart_game">Restart game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_restart_game">Do you want to restart game?</string>
    <string name="info">2048 is an engaging game where you merge numbers to reach the coveted 2048 tile. Challenge yourself and compete with friends as the game saves your 20 highest scores and dates. This game was created by a student from Generation IT Academy, showcasing their passion for coding and creativity.</string>
    <string name="callUs">Call us:</string>
</resources>