<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/lottie_congratulation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_exclamation"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/offside_regular"
        android:gravity="center"
        android:text="@string/do_you_want_to_restart_game"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:id="@+id/lottie_congratulation"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="200dp"-->
    <!--        app:lottie_autoPlay="true"-->
    <!--        app:lottie_fileName="anim_alert.json"-->
    <!--        app:lottie_loop="true" />-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/bg_play_dialog_red"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_play_dialog"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>
</LinearLayout>
