<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:elevation="4dp"
    android:padding="24dp">

    <TextView
        android:id="@+id/youWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/offside_regular"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/offside_regular"
        android:text="@string/current_score1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youWin" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/offside_regular"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentScore" />

    <TextView
        android:id="@+id/tv_current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/offside_regular"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/currentScore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/currentScore"
        tools:layout_editor_absoluteX="122dp"
        tools:text="100000" />

    <TextView
        android:id="@+id/tv_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/offside_regular"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/highScore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/highScore"
        tools:layout_editor_absoluteX="105dp"
        tools:text="100000" />


    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="5dp"
        android:src="@drawable/btn_home"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:padding="2dp"
        android:layout_marginEnd="24dp"
        android:rotation="180"
        android:rotationX="180"
        android:src="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highScore" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnPlay"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:src="@drawable/btn_play2"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintRight_toLeftOf="@id/btnHome"
        app:layout_constraintTop_toTopOf="@id/btnBack" />
</androidx.constraintlayout.widget.ConstraintLayout>
