<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="uz.gita.game2048v1.screen.play.PlayScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txt2048"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/offside_regular"
        android:text="@string/_2048"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnHome"
        app:layout_constraintLeft_toLeftOf="@id/btnContainer" />

    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/btn_home"
        app:layout_constraintBottom_toTopOf="@id/btnContainer"
        app:layout_constraintLeft_toLeftOf="@id/btnContainer" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/leftContainer"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_record"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/txt2048"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/centerVertical"
        app:layout_constraintRight_toLeftOf="@id/rightContainer"
        app:layout_constraintTop_toTopOf="@id/txt2048">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/offside_regular"
            android:text="@string/now"
            android:textColor="#EDEDED"
            tools:textSize="12sp" />

        <TextView
            android:id="@+id/currentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/offside_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="100000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/rightContainer"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_record"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/txt2048"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/leftContainer"
        app:layout_constraintRight_toRightOf="@id/btnContainer"
        app:layout_constraintTop_toTopOf="@id/txt2048">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/offside_regular"
            android:text="@string/best_score"
            android:textColor="#EDEDED"
            tools:textSize="12sp" />

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/offside_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="100000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnRestart"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/btn_restart"
        app:layout_constraintBottom_toTopOf="@id/btnContainer"
        app:layout_constraintRight_toRightOf="@id/btnContainer" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:rotation="180"
        android:rotationX="180"
        android:src="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btnRestart"
        app:layout_constraintRight_toLeftOf="@id/btnRestart"
        app:layout_constraintTop_toTopOf="@id/btnRestart" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />

            <androidx.appcompat.widget.AppCompatTextView style="@style/playButton" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!--
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:text="current score:"
            app:layout_constraintBottom_toTopOf="@id/bestScore"
            app:layout_constraintRight_toLeftOf="@id/currentScore" />

        <TextView
            android:id="@+id/currentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/bestScore"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="20 000" />


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:text="best score:"
            app:layout_constraintBottom_toTopOf="@id/btnContainer"
            app:layout_constraintRight_toLeftOf="@id/bestScore" />

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/btnContainer"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="100 000" />
    -->